--- a/W207_final_presentation_kiva_Krysten.ipynb
+++ b/W207_final_presentation_kiva_Krysten.ipynb
@@ -4743,17 +4743,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Model                                 | Overall Accuracy | 0 score | 1 score | 2 score | \n",
+    "| Model                                 | Overall Accuracy | 1 score | 2 score | 3 score | \n",
     "|-------------------------------------|------------------|-------- |---------|---------|\n",
-    "| A.Top 3 countries + Top 3 Sectors                         |       92.6%      |   32%   |   96%   |  96%   | \n",
-    "| Over sampling                        |       92.8%      |    0%   |   96%   |  96%   |   \n",
-    "| Down sampling                             |       93.1%      |    8%   |   96%   |  96%   |     \n",
-    "| Original sampling                  |       92.8%      |    7%   |   96%   |  96%   |    \n",
-    "| B.All countries and sectors   |       72.6%      |   28%   |   83%   |  96%   |    \n",
-    "| Over sampling        |      74.69%      |   75%   |   74%   |  96%   | \n",
-    "| Over sampling       |      79.97%      |   81%   |   79%   |  96%   |    \n",
-    "| Original sampling                  |       65.4%      |   23%   |   78%   |  96%   |     \n",
-    "| Multi-Class Logistic Classification  |      70.47%      |   72%   |   69%   |   96%   |    "
+    "| A.Top 3 countries + Top 3 Sectors                                         |    | \n",
+    "| Over sampling                        |      69.09%      |   5%   |   24%   |  81% |   \n",
+    "| Down sampling                             |       68.88%      |    4%   |   25%   |  81%   |     \n",
+    "| Original sampling                  |       69.06%      |    5%   |   24%   |  81%   |    \n",
+    "| B.All countries and sectors   |        |    \n",
+    "| Over sampling        |     61.49%      |   3%   |   28%   |  75%     | \n",
+    "| Down sampling       |      66.15%      |   3%   |   27%   |  79%   |    \n",
+    "| Original sampling                  |       61.50%      |   3%   |   28%   |  75%   |     \n",
+    "| Multi-Class Logistic Classification  |      92.80%      |     |    "
    ]
   }
  ],
@@ -4773,7 +4773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
